[gd_scene load_steps=11 format=3 uid="uid://dm2q8uap461io"]

[ext_resource type="Script" uid="uid://j43co6ncpb71" path="res://input/input_controller.gd" id="1_5c80d"]
[ext_resource type="Script" uid="uid://htpv03t6mtsr" path="res://utility/main.gd" id="1_6c6r0"]
[ext_resource type="Script" uid="uid://pxbrabeyfmdj" path="res://ui/mouse_highlight.gd" id="2_08cas"]
[ext_resource type="PackedScene" uid="uid://cv8xl8ojb6170" path="res://ui/choice_menu.tscn" id="3_gnkg6"]
[ext_resource type="Script" uid="uid://d38hw0iob5ice" path="res://ui/tile_menu.gd" id="4_eor0r"]
[ext_resource type="Script" uid="uid://y7rx45f5thnj" path="res://ui/recipe_menu.gd" id="5_620td"]
[ext_resource type="Script" uid="uid://dh2il40jfwe1b" path="res://ui/tech_menu.gd" id="6_620td"]
[ext_resource type="Script" uid="uid://cnwq4o5pfqqam" path="res://ui/item_menu.gd" id="7_tmgib"]
[ext_resource type="PackedScene" uid="uid://cwy0b1o8v7bgy" path="res://system/free_agent.tscn" id="8_tmgib"]
[ext_resource type="Texture2D" uid="uid://ckng74ohuysay" path="res://art/Square.png" id="9_620td"]

[node name="Main" type="Node2D"]
script = ExtResource("1_6c6r0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Debug" type="RichTextLabel" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 500.0
offset_bottom = 500.0
bbcode_enabled = true
scroll_active = false

[node name="ChoiceMenu" parent="CanvasLayer/Control" instance=ExtResource("3_gnkg6")]
unique_name_in_owner = true
layout_mode = 1
offset_top = -40.0
script = ExtResource("4_eor0r")

[node name="RecipeMenu" type="ScrollContainer" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
grow_horizontal = 0
grow_vertical = 2
horizontal_scroll_mode = 0
script = ExtResource("5_620td")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/RecipeMenu"]
layout_mode = 2

[node name="ItemMenu" type="ScrollContainer" parent="CanvasLayer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 128.0
grow_vertical = 2
horizontal_scroll_mode = 0
script = ExtResource("7_tmgib")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ItemMenu"]
layout_mode = 2

[node name="TechMenu" type="ScrollContainer" parent="CanvasLayer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
horizontal_scroll_mode = 0
script = ExtResource("6_620td")

[node name="VBoxContainer" type="GridContainer" parent="CanvasLayer/Control/TechMenu"]
layout_mode = 2
columns = 2

[node name="Tiles" type="Node2D" parent="."]

[node name="Agents" type="Node2D" parent="."]
z_index = 1

[node name="Player" parent="Agents" instance=ExtResource("8_tmgib")]
debug_player = true

[node name="InputController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_5c80d")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.3306, 0.546747, 0.58, 1)
scale = Vector2(25, 25)
texture = ExtResource("9_620td")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.3306, 0.58, 0.3306, 1)
scale = Vector2(12.25, 12.25)
texture = ExtResource("9_620td")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="MouseHighlight" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_08cas")
